// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid;
  border-radius: 4px;
  border-color: #1c1c1c;
  color: #1c1c1c;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  min-width: 100px;
  padding: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: bold;
  -webkit-transition: 280ms all ease;
  transition: 280ms all ease;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.4;
}

.emotion-0:hover {
  background-color: #1c1c1c;
  color: #fff;
}

<button
  className="emotion-0"
  color="inverseBackground"
  height="fit-content"
>
  Test
</button>
`;

exports[`Button renders with disabled prop correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid;
  border-radius: 4px;
  border-color: #1c1c1c;
  color: #1c1c1c;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  min-width: 100px;
  padding: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: bold;
  -webkit-transition: 280ms all ease;
  transition: 280ms all ease;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.4;
}

<button
  className="emotion-0"
  color="inverseBackground"
  disabled={true}
  height="fit-content"
>
  Test
</button>
`;

exports[`Button renders with inverse prop correctly 1`] = `
.emotion-0 {
  background-color: background;
  border: 1px solid;
  border-radius: 4px;
  border-color: inverseBackground;
  color: inverseBackground;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  min-width: 100px;
  padding: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: bold;
  -webkit-transition: 280ms all ease;
  transition: 280ms all ease;
  background-color: inverseBackground;
  color: background;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.4;
}

.emotion-0:hover {
  background-color: background;
  color: inverseBackground;
}

<button
  className="emotion-0"
  color="inverseBackground"
  height="fit-content"
>
  Test
</button>
`;
